unpackaged/objects/WorkIt2__Time_Entry__c.object
<CustomObject>
    <description>A single session worked on an object tracked by WorkIt! Child of the Timing Object.</description>
    <fields>
        <fullName>WorkIt2__Action__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewing Details</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Control Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking up solution in KB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modifying Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Calculated_Seconds__c</fullName>
        <label>WINTERNAL: Business Calculated Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Hours__c</fullName>
        <formula>floor(floor(WorkIt2__Business_Calculated_Seconds__c) / 3600 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Minutes__c</fullName>
        <formula>FLOOR(MOD(floor(WorkIt2__Business_Calculated_Seconds__c) ,3600) / 60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Seconds__c</fullName>
        <formula>MOD( floor(WorkIt2__Business_Calculated_Seconds__c) ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business-Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Hours__c</fullName>
        <formula>WorkIt2__Business_Calculated_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Minutes__c</fullName>
        <formula>WorkIt2__Business_Calculated_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time_In_Seconds__c</fullName>
        <formula>WorkIt2__Business_Calculated_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Business_Time__c</fullName>
        <formula>TEXT(WorkIt2__Business_Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Business_Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Business_Seconds__c) &amp; &quot;s &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WorkIt2__End__c</fullName>
        <formula>IF( ISNULL( WorkIt2__Force_End__c),IF( ((NOW()  - WorkIt2__Heartbeat__c ) * 86400) &gt; 60, WorkIt2__Heartbeat__c, null), WorkIt2__Force_End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Force_End__c</fullName>
        <label>WINTERNAL: Force End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkIt2__HB_Context__c</fullName>
        <label>WINTERNAL: HB Context</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Heartbeat__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>WINTERNAL: Heartbeat</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Hours__c</fullName>
        <formula>floor(floor(WorkIt2__Workflow_Seconds__c) / 3600 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Minutes__c</fullName>
        <formula>FLOOR(MOD(floor(WorkIt2__Workflow_Seconds__c)  ,3600) / 60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Overtime_Status__c</fullName>
        <formula>CASE( WorkIt2__Color__c ,
&quot;Red&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_01.png&quot;, &quot;Red&quot;) ,
&quot;Orange&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_02.png&quot;, &quot;Orange&quot;) ,
&quot;Yellow&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_03.png&quot;, &quot;Yellow&quot;) ,
&quot;Blue&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_05.png&quot;, &quot;Blue&quot;) ,
&quot;Violet&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_06.png&quot;, &quot;Violet&quot;) ,
IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_04.png&quot;, &quot;Green&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Seconds__c</fullName>
        <formula>MOD( floor(WorkIt2__Workflow_Seconds__c)   ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Start__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Hours__c</fullName>
        <formula>WorkIt2__Workflow_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Minutes__c</fullName>
        <formula>WorkIt2__Workflow_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time_In_Seconds__c</fullName>
        <formula>WorkIt2__Workflow_Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Time__c</fullName>
        <formula>TEXT(WorkIt2__Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Seconds__c) &amp; &quot;s &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Timeout_Seconds__c</fullName>
        <label>Timeout Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Timing__c</fullName>
        <label>Timing</label>
        <referenceTo>WorkIt2__Timing__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Total_Seconds__c</fullName>
        <formula>IF( ISNULL(WorkIt2__End__c) , (( NOW() - WorkIt2__Start__c) * 86400) , ((WorkIt2__End__c - WorkIt2__Start__c) * 86400))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WINTERNAL: Total Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Workflow_Seconds__c</fullName>
        <formula>( WorkIt2__Heartbeat__c -  WorkIt2__Start__c ) * 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WINTERNAL: Workflow Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>WorkIt2__All</fullName>
        <columns>NAME</columns>
        <columns>WorkIt2__Timing__c</columns>
        <columns>WorkIt2__Action__c</columns>
        <columns>WorkIt2__Start__c</columns>
        <columns>WorkIt2__End__c</columns>
        <columns>WorkIt2__Time__c</columns>
        <columns>WorkIt2__Business_Time__c</columns>
        <columns>WorkIt2__Overtime_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>WorkIt2__Open_Sessions</fullName>
        <columns>NAME</columns>
        <columns>WorkIt2__Timing__c</columns>
        <columns>WorkIt2__Action__c</columns>
        <columns>WorkIt2__Start__c</columns>
        <columns>WorkIt2__End__c</columns>
        <columns>WorkIt2__Time__c</columns>
        <columns>WorkIt2__Business_Time__c</columns>
        <columns>WorkIt2__Overtime_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkIt2__End__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>